--- a/wercker.yml
+++ b/wercker.yml
@@ -1,9 +1,6 @@
-box: swift:3.1
+box: ibmcom/swift-ubuntu:4.0
 deploy:
   steps:
-    
-    - fly1tkg/deploy-master-only:
-        enable: true
 
     - script:
         name: Install system libraries
